style(styles): restructure media queries and add explicit font sizes for headings to improve readability and ensure consistent styling across different screen sizes

--- a/src/routes/styles/foundation/_base.scss
+++ b/src/routes/styles/foundation/_base.scss
@@ -90,10 +90,23 @@ h4 {
 	text-wrap: pretty;
 }
 
-@media screen and (min-width: 1024px) {
-	h1 {
+h1 {
+	font-size: 1.875rem;
+	@media screen and (min-width: 1024px) {
 		margin-block-start: calc(var(--spacing-s) - var(--half-leading));
 	}
+}
+
+h2 {
+	font-size: 1.5rem;
+}
+
+h3 {
+	font-size: 1.25rem;
+}
+
+h4 {
+	font-size: 1.125rem;
 }
 
 address {
